intro rastchin part

--- a/homepage.html
+++ b/homepage.html
@@ -395,6 +395,58 @@
             </nav>
         </div>
     </div>
+
+    <main>
+        <article class="container-intro-rastChin">
+            <div class="container">
+                <h1 class="container-intro-rastChin__first-title">بزرگترین فروشگاه قالب و افزونه وردپرس در ایران</h1>
+                <h2 class="container-intro-rastChin__second-title">راهکار مطمئن و <span>سریع</span> برای طراحی و توسعه وب‌سایت
+                </h2>
+
+                <div class="total-container-search">
+                    <div class="container-search-box">
+                        <div class="container-all-products">
+                            <span>همه محصولات</span>
+                            <i class="fa fa-angle-down"></i>
+                            <ul class="container-all-products__menus">
+                                <li><a href="#">همه محصولات</a></li>
+                                <li><a href="#">قالب وردپرس</a></li>
+                                <li><a href="#">قالب WHMCS</a></li>
+                                <li><a href="#">قالب اپن کارت</a></li>
+                                <li><a href="#">اسکریپت</a></li>
+                                <li><a href="#">افزونه وردپرس</a></li>
+                                <li><a href="#">افزونه اپن کارت</a></li>
+                            </ul>
+                        </div>
+                        <input type="search" name="" class="container-all-products__input-search" id="" placeholder="اسم قالب یا افزونه شما مثلا : انفولد">
+                    </div>
+                    <div class="container-search-icon">
+                        <i class="fa fa-search"></i>
+                    </div>
+                </div>
+
+                <div class="the-most-upToDate-wordpress-theme">
+                    به روزترین ها
+                    <a href="#">قالب وردپرس</a>
+                </div>
+            </div>
+
+            <div class="second-container">
+                <div class="container-for-more-intro-rastChin">
+                    <div class="cash-back">
+                        <p><span>۲۰٪</span><span>مبلغ خرید</span> از راست چین هدیه دریافت کن</p>
+                        <a href="#">معرفی کش بک</a>
+                    </div>
+                    <div class="about-rastChin">
+                        <a href="#">درباره راستچین</a>
+                    </div>
+                    <div class="quality-guarantee">
+                        <a href="#">گارانتی کیفیت</a>    
+                    </div>
+                </div>
+            </div>
+        </article>
+    </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
