Special products section

--- a/homepage.html
+++ b/homepage.html
@@ -165,16 +165,16 @@
             </div>
 
             <div class="header__left-container">
-                <div class="header__left-container__easy-access">
+                <div class="header__left-container__easy-access hover-gray">
                     <div></div>
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="header__left-container__shopping-cart">
+                <div class="header__left-container__shopping-cart hover-gray">
                     <i class="fa fa-cart-plus"></i>
                 </div>
-                <div class="header__left-container__container-register">
+                <div class="header__left-container__container-register hover-green">
                     <i class="fa fa-user-circle-o"></i>
                     <div class="header__left-container__container-register__register">
                         <a href="#">ورود/ثبت نام</a>
@@ -420,7 +420,7 @@
                         </div>
                         <input type="search" name="" class="container-all-products__input-search" id="" placeholder="اسم قالب یا افزونه شما مثلا : انفولد">
                     </div>
-                    <div class="container-search-icon">
+                    <div class="container-search-icon hover-green">
                         <i class="fa fa-search"></i>
                     </div>
                 </div>
@@ -443,6 +443,255 @@
                     <div class="quality-guarantee">
                         <a href="#">گارانتی کیفیت</a>    
                     </div>
+                </div>
+            </div>
+        </article>
+
+        <article class="total-container-special-products total-container-common">
+            <div class="second-container">
+                <div class="container-common__product">
+                    <div class="container-common__product__title">
+                        <div class="container-common-product__title__img">
+                            <img src="./img/jaam-icon.svg" alt="jaam-icon">
+                        </div>
+                        <h2>محصولات ویژه</h2>
+                    </div>
+                    <div class="container-common-product__left">
+                        <div class="arrow-right">
+                            <i class="fa fa-long-arrow-right"></i>
+                        </div>
+                        <div class="arrow-left hover-gray">
+                            <i class="fa fa-long-arrow-left"></i>
+                        </div>
+                        <div class="container-common-product__left__see-all">
+                            <a href="#">مشاهده همه</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-common__show-products">
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/parskala-img.jpg" alt="parskal-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#">قالب پارس کالا٬ پوسته فروشگاهی parskala</a></h1>
+                            <h1><a href="#">قالب پارس کالا٬ پوسته فروشگا...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#"> قالب فروشگاهی وردپرس</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۹۸</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۹۹۵.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/homey-img.png" alt="homey-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#"> قالب رزرو و اجاره اقامتگاه هومی، Homey </a></h1>
+                            <h1><a href="#"> قالب رزرو و اجاره اقامتگاه هوم...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#">قالب املاک</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۰۵</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۰٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۳۹۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/member-img.jpg" alt="member-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#"> افزونه Ultimate Member، عضویت ویژه وردپرس </a></h1>
+                            <h1><a href="#"> افزونه Ultimate Member، عضو...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#">  افزونه مدیریت ورود و پروفایل</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۳۱۲</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۶٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۲۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/link-shortener-img.jpg" alt="link-shortener-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#"> اسکریپت کوتاه کننده لینک Premium URL Shortener </a></h1>
+                            <h1><a href="#"> اسکریپت کوتاه کننده لینک ner...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#">ابزارها</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۶۳</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۹۱٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۵۹۵.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/optin-wheel-pro-img.jpg" alt="optin-wheel-pro-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#"> افزونه گردونه شانس Optin Wheel Pro </a></h1>
+                            <h1><a href="#">  افزونه گردونه optin...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#"> افزونه فروشگاهی</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۲,۳۳۷</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۴٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۹۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/elementor-img.jpg" alt="elementor-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#">   افزونه AnyWhere Elementor Pro، افزودنی المنتور </a></h1>
+                            <h1><a href="#">  افزونه AnyWhere Elementor...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#">افزودنی های المنتور</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱,۱۶۴</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۷۴٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۲۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+
                 </div>
             </div>
         </article>
