The first part of the latest products

--- a/homepage.html
+++ b/homepage.html
@@ -1097,6 +1097,51 @@
                 </div>
             </article>
         </div>
+
+        <article class="total-container-latest-products">
+            <div class="container-latest-products-titles">
+                <div class="second-container">
+                    <div class="container-latest-products-title__container-right">
+                        <div class="container-latest-products-title__container-right__container-icon"></div>
+                        <h2>جدیدترین محصولات</h2>
+                    </div>
+                    <div class="container-latest-products-title__container-mid">
+                        <a href="#">قالب وردپرس</a>
+                        <a href="#">افزونه وردپرس</a>
+                        <a href="#">قالب HTML</a>
+                        <a href="#">اسکریپت</a>
+                    </div>
+                    <div class="container-latest-products-title__container-left">
+                        <div class="container-latest-products-title__container-left__nine-to-square">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <span>جدیدترین</span>
+                        <i class="fas fa-angle-down"></i>
+                        <ul class="container-latest-products-title__container-left__under-menu">
+                            <li><a href="#">جدیدترین ها</a></li>
+                            <li><a href="#">پرفروش ترین ها</a></li>
+                            <li><a href="#">بروزترین ها</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="container-latest-products-title__second-container-mid">
+                        <a href="#">قالب وردپرس</a>
+                        <a href="#">افزونه وردپرس</a>
+                        <a href="#">قالب HTML</a>
+                        <a href="#">اسکریپت</a>
+                </div>
+            </div>
+
+
+        </article>
     </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
