--- a/homepage.html
+++ b/homepage.html
@@ -1445,6 +1445,253 @@
             </div> 
 
         </article>
+
+        <article class="total-container-the-most-popular-products second-container-for-common-style">
+            <div class="second-container">
+                <div class="container-common__product">
+                    <div class="container-common__product__title">
+                        <div class="container-common-product__title__img">
+                            <img src="./img/jaam-icon.svg" alt="jaam-icon">
+                        </div>
+                        <h2>محبوب ترین محصولات</h2>
+                    </div>
+                    <div class="container-common-product__left">
+                        <div class="arrow-right">
+                            <i class="fa fa-long-arrow-right"></i>
+                        </div>
+                        <div class="arrow-left hover-gray">
+                            <i class="fa fa-long-arrow-left"></i>
+                        </div>
+                        <div class="container-common-product__left__see-all">
+                            <a href="#">مشاهده همه</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-common__show-products">
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/yoast-seo-img.png" alt="yoast-seo-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه Yoast SEO، افزونه یواست سئو </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه Yoast SEO، افزونه یواس...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه سئو</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۲۴,۵۴۹</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۸۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/Xtra-img.jpg" alt="Xtra-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> قالب اکسترا، قالب Xtra پرفروش ترین قالب ایران </a></h1>
+                            <h1><a href="#" class="hover-color-green"> قالب اکسترا، قالب Xtra پرفر...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">قالب چند منظوره</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۷,۴۳۸</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۹۰٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۳۶۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/WProcket-img.jpg" alt="WProcket-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه WP Rocket⚡ راکت افزایش سرعت وردپرس </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه WP Rocket⚡ راکت افزا</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه بهینه سازی</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۶,۷۶۴</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۸۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/woodmartpluse-img.jpg" alt="woodmartpluse-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> قالب وودمارت پلاس بهینه ترین نسخه + اپلیکیشن اندروید  </a></h1>
+                            <h1><a href="#" class="hover-color-green"> قالب وودمارت پلاس بهینه تر...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">قالب فروشگاهی وردپرس</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۴,۴۶۰</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۴۱۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/proElementor-img.jpg" alt="proElementor-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه المنتور پرو، افزونه elementor </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه المنتور پرو، افزونه ele</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه سئو</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۱,۵۶۶</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۸۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/RankMath-img.jpg" alt="RankMath-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه رنک مث پرو، افزونه Rank Math </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه رنک مث پرو، افزونه Ran</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه سئو</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۹,۴۷۶</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۹۱٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۸۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </article>
     </main>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
