--- a/homepage.html
+++ b/homepage.html
@@ -447,7 +447,7 @@
             </div>
         </article>
 
-        <article class="total-container-special-products">
+        <article class="total-container-special-products first-container-for-common-style ">
             <div class="second-container">
                 <div class="container-common__product">
                     <div class="container-common__product__title">
@@ -1623,7 +1623,7 @@
                         <div class="container-show-products__title">
                             <h1><a href="#" class="hover-color-green"> افزونه المنتور پرو، افزونه elementor </a></h1>
                             <h1><a href="#" class="hover-color-green"> افزونه المنتور پرو، افزونه ele</a></h1>
-                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه سئو</a> </p>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه صفحه ساز</a> </p>
                         </div>
                         <div class="container-show-product__container-sales-information">
                             <div class="container-sales-information">
@@ -1675,6 +1675,253 @@
                                     </div>
                                     <div class="price">
                                         <span>۱۸۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </article>
+
+        <article class="total-container-the-hottest-page-builder-plugins first-container-for-common-style ">
+            <div class="second-container">
+                <div class="container-common__product">
+                    <div class="container-common__product__title">
+                        <div class="container-common-product__title__img">
+                            <img src="./img/hottest-img.svg" alt="hottest-img">
+                        </div>
+                        <h2>داغ ترین افزونه های صفحه ساز</h2>
+                    </div>
+                    <div class="container-common-product__left">
+                        <div class="arrow-right">
+                            <i class="fa fa-long-arrow-right"></i>
+                        </div>
+                        <div class="arrow-left hover-gray">
+                            <i class="fa fa-long-arrow-left"></i>
+                        </div>
+                        <div class="container-common-product__left__see-all">
+                            <a href="#">مشاهده همه</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-common__show-products">
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/proElementor-img.jpg" alt="proElementor-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه المنتور پرو، افزونه elementor </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه المنتور پرو، افزونه ele</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه صفحه ساز</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱۱,۵۶۶</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۸٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۸۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/woocommerce-img.jpg" alt="woocommerce-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green">افزونه ویژوال کامپوزر، پلاگین Visual composer</a></h1>
+                            <h1><a href="#" class="hover-color-green">افزونه ویژوال کامپوزر، پلاگین Visu...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزونه صفحه ساز</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۵,۲۹۹</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۹۰٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۵۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/element-pack-img.jpg" alt="element-pack-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه Element Pack، افزونه المنت پک </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه Element Pack، افزون...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزودنی های المنتور</a></p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱,۸۱۷</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۶٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۴۷.۷۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/woocommerce-img.jpg" alt="woocommerce-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> صفحه ساز ووکامرس المنتور، woocommerce page builder elementor </a></h1>
+                            <h1><a href="#" class="hover-color-green"> صفحه ساز ووکامرس المنتو...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزودنی های المنتور</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۸۳۸</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۰٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۲۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/jetEngine-img.png" alt="JetEngine-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه جت انجین، پلاگین JetEngine </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه جت انجین، پلاگین Jet... </a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green"> افزونه کاربردی</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۴۳۸</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۹۰٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۲۹.۰۰۰</span>
+                                        <span>تومان</span>
+                                    </div>
+                                </div>
+                                <div class="container-shopping-cart-and-Preview">
+                                    <div class="shopping-cart hover-green">
+                                        <a href="#">افزودن به سبد خرید</a>
+                                    </div>
+                                    <div class="preview hover-gray">
+                                        <a href="#">پیشنمایش</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="container-show-product">
+                        <div class="container-common__show-products__img">
+                            <a href="#"><img src="./img/UnlimitedElements-For-Elementor-img.jpg" alt="elementor-img"></a>
+                        </div>
+                        <div class="container-show-products__title">
+                            <h1><a href="#" class="hover-color-green"> افزونه عناصر نامحدود المنتور Unlimited Elements For Elementor </a></h1>
+                            <h1><a href="#" class="hover-color-green"> افزونه عناصر نامحدود المنتو...</a></h1>
+                            <p>دسته بندی اصلی: <a href="#" class="hover-color-green">افزودنی های المنتور</a> </p>
+                        </div>
+                        <div class="container-show-product__container-sales-information">
+                            <div class="container-sales-information">
+                                <div class="container-sales-information__sales-details">
+                                    <div class="sales-number">
+                                        <span>۱,۲۵۹</span>
+                                        <span>فروش</span>
+                                    </div>
+                                    <div class="percentage-like">
+                                        <span>۸۴٪</span>
+                                        <span>رضایت</span>
+                                    </div>
+                                    <div class="price">
+                                        <span>۱۵۹.۰۰۰</span>
                                         <span>تومان</span>
                                     </div>
                                 </div>
